# finally

./: .dockerignore  .env.example  .gitignore  .sprite  CLAUDE.md  Dockerfile  docker-compose.yml
.claude/: gsd-file-manifest.json  gsd-install-state.json  settings.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
backend/: demo.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: chat.py  health.py  portfolio.py  stream.py  watchlist.py
backend/app/chat/: context.py  llm.py
backend/app/db/: __init__.py  connection.py  database.py  queries.py  schema.py  seed.py
backend/app/llm/: __init__.py  client.py  mock.py  prompt.py  schema.py  service.py
backend/app/market/: __init__.py  cache.py  interface.py  loop.py  massive.py  simulator.py
backend/app/routers/: chat.py  health.py  market.py  portfolio.py  watchlist.py
backend/app/services/: portfolio.py  trading.py  watchlist.py
backend/tests/: test_app.py  test_chat.py  test_db.py  test_market_sse.py  test_portfolio.py  test_watchlist.py
backend/tests/api/: conftest.py  test_health.py  test_portfolio.py  test_stream.py  test_watchlist.py
backend/tests/db/: conftest.py  test_init.py  test_queries.py
backend/tests/llm/: test_mock.py  test_schema.py  test_service.py
backend/tests/market/: test_cache.py  test_interface.py  test_loop.py  test_massive.py  test_simulator.py
backend/tests/services/: conftest.py  test_portfolio.py  test_trading.py  test_watchlist.py
frontend/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
(+159 files in other folders)
