[project]
name = "finally-backend"
version = "0.1.0"
description = "FinAlly AI Trading Workstation — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "litellm>=1.86.2",
    "aiosqlite>=0.22.1",
    "sse-starlette>=3.4.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "rich>=15.0.0",
    "ruff>=0.15.14",
]
